--- a/package.json
+++ b/package.json
@@ -15,22 +15,18 @@
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
   },
- 
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    
-  },
-  
+  "bugs": {},
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^13.1.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.5.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
